# jodie-optimiser

./: README.md  pyproject.toml
src/domain/: battery_data.py  constraints_data.py
